# INF2004

./: README.md
INF2004_GRP26_PROJECT/: CMakeLists.txt
INF2004_GRP26_PROJECT/Pico1_FileCarve/: CMakeLists.txt  Pico1_FileCarve.c
INF2004_GRP26_PROJECT/Pico2_FileStorage/: CMakeLists.txt  Pico2_FileStorage.c
INF2004_GRP26_PROJECT/Project_Libraries/no-OS-FatFS-SD-SPI-RPi-Pico-master/FatFs_SPI/ff14a/source/: ffconf.h
INF2004_GRP26_PROJECT/Project_Libraries/no-OS-FatFS-SD-SPI-RPi-Pico-master/FatFs_SPI2/: CMakeLists.txt
INF2004_GRP26_PROJECT/Project_Libraries/no-OS-FatFS-SD-SPI-RPi-Pico-master/FatFs_SPI2/sd_driver/: hw_config.c
INF2004_GRP26_PROJECT/Project_Libraries/no-OS-FatFS-SD-SPI-RPi-Pico-master/FatFs_SPI3/: CMakeLists.txt
INF2004_GRP26_PROJECT/SD_FileCarve_Init/: CMakeLists.txt  SD_FileCarve_Init.c
